--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "contracheque",
+  "name": "api-contracheque",
   "version": "1.0.0",
   "description": "API para gerar o contracheque FAB em PDF de forma padronizada.",
   "main": "index.js",
@@ -9,17 +9,16 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/chipoleschdaca/contracheque-fab.git"
+    "url": "git+https://github.com/chipoleschdaca/api-sdpp.git"
   },
   "author": "Daniel Chipolesch",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/chipoleschdaca/contracheque-fab/issues"
+    "url": "https://github.com/chipoleschdaca/api-sdpp/issues"
   },
-  "homepage": "https://github.com/chipoleschdaca/contracheque-fab#readme",
+  "homepage": "https://github.com/chipoleschdaca/api-sdpp#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "consign": "^0.1.6",
     "express": "^4.17.1",
     "http": "0.0.1-security",
     "morgan": "^1.10.0",
