--- a/package.json
+++ b/package.json
@@ -20,9 +20,15 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "fs": "0.0.1-security",
+    "html-pdf": "^3.0.1",
     "http": "0.0.1-security",
     "morgan": "^1.10.0",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "pdfkit": "^0.12.3",
+    "pdfmake": "^0.2.2",
+    "swagger-jsdoc": "^6.1.0",
+    "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
     "nodemon": "^2.0.13"
