--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "fs": "0.0.1-security",
+    "html-pdf": "^3.0.1",
     "http": "0.0.1-security",
     "moment": "^2.29.1",
     "morgan": "^1.10.0",
