--- a/package.json
+++ b/package.json
@@ -26,9 +26,7 @@
     "moment": "^2.29.1",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
-    "pdfmake": "^0.2.2",
-    "swagger-jsdoc": "^6.1.0",
-    "swagger-ui-express": "^4.1.6"
+    "pdfmake": "^0.2.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.13"
